[package]
name = "sync-utils"
version = "0.1.0"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com"]
categories = ["asynchronous", "concurrency"]
keywords = ["async", "non-blocking", "concurrency"]



[dependencies]
tokio = { version = "1", features = ["time", "rt"] }
log = "0.4"
atomic-waitgroup = "0"
crossfire = "1"
crossbeam = "0.8"
parking_lot = "0.9"
num_cpus = "1"
lazy_static="1.4"
async-trait = "0"
core_affinity = "0.5"
chrono = "0"

[dev-dependencies]
getrandom = "0.1"
md5 = "0"
tokio = { version = "1", features = ["time", "sync", "rt", "rt-multi-thread"] }
captains-log = "0.3.2"
