[package]
name = "sync-utils"
version = "0.1.3"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com"]
repository = "https://github.com/NaturalIO/sync-utils-rs"
license = "MIT"
categories = ["asynchronous", "concurrency"]
keywords = ["async", "non-blocking", "concurrency", "worker"]
description = """
A bunch of utilities in async-await and blocking context.
"""


[dependencies]
tokio = { version = "1", features = ["time", "rt"] }
log = "0.4"
atomic-waitgroup = "0"
crossfire = "1.1"
parking_lot = "0.9"
num_cpus = "1"
lazy_static="1.4"
async-trait = "0"
core_affinity = "0.5"
chrono = "0"

[dev-dependencies]
tokio = { version = "1", features = ["time", "sync", "rt", "rt-multi-thread"] }
captains-log = "0.3.2"
crossbeam = "0.8"
